--- a/index.html
+++ b/index.html
@@ -1,2 +1,32 @@
-Eskimo nation.
+<!doctype html>
+<html class="no-js" lang="">
 
+<head>
+    <meta charset="utf-8">
+    <title>eskimo-nation</title>
+    <style>
+        * {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        main {
+            max-width: 38rem;
+            padding: 2rem;
+            margin: auto;
+        }
+    </style>
+
+    <meta name="theme-color" content="#fafafa">
+</head>
+
+<body>
+    <main>
+        <strong>Eskimo nation.</strong><Br>
+        David Nash<br>
+        Web developer, Northampton, UK<br>
+        david[ATAT]eskimo-nation.co.uk<br>
+        <a href="https://twitter.com/stormingnormal">tweet me</a>
+    </main>
+</body>
+
+</html>
