--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         David Nash<br>
         Web developer, Northampton, UK<br>
         david[ATAT]eskimo-nation.co.uk<br>
+        PHP, Wordpress, React, ColdFusion, SQL<br>
         <a href="https://twitter.com/stormingnormal">tweet me</a>
     </main>
 </body>
