--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
             font-family: Arial, Helvetica, sans-serif;
         }
 
+        body {
+            background: chocolate;
+        }
+
         main {
-            max-width: 38rem;
+            margin: 200px auto 200px auto;
+            max-width: 48rem;
             padding: 2rem;
-            margin: auto;
+            background-color: white;
+            height: 25vw;
         }
     </style>
 
@@ -25,7 +31,7 @@
         David Nash<br>
         Web developer, Northampton, UK<br>
         david[ATAT]eskimo-nation.co.uk<br>
-        PHP, Wordpress, React, ColdFusion, SQL<br>
+        PHP, Wordpress, React, ColdFusion, SQL, Javascript<br>
         <a href="https://twitter.com/stormingnormal">tweet me</a>
     </main>
 </body>
