--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div style="position:absolute;bottom:0;right:0">
             <input type="checkbox" id="retro"><label for="retro">retro loading screen (photosenstivity warning)</label>
         </div>
-
+        <a rel="me" href="https://techspace.social/@stormingnormal">Mastodon</a>
     </main>
     <script>
         document.getElementById('retro').onclick = function () {
@@ -49,6 +49,7 @@
 
         }
     </script>
+    
 </body>
 
 </html>
