--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
         Web developer, Northampton, UK<br>
         david[ATAT]eskimo-nation.co.uk<br>
         PHP, Wordpress, React, ColdFusion, SQL, Javascript<br>
-        <a href="https://twitter.com/stormingnormal">tweet me</a>
         <div style="position:absolute;bottom:0;right:0">
             <input type="checkbox" id="retro"><label for="retro">retro loading screen (photosenstivity warning)</label>
         </div>
-        <a rel="me" href="https://techspace.social/@stormingnormal">Mastodon</a>
+        <a rel="me" href="https://mastodon.social/@stormingnormal">Mastodon</a>
     </main>
     <script>
         document.getElementById('retro').onclick = function () {
