--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 <body>
     <main>
+        <p>
         <strong>Eskimo nation.</strong><Br>
         David Nash<br>
         Web developer, Northampton, UK<br>
@@ -36,7 +37,9 @@
         <div style="position:absolute;bottom:0;right:0">
             <input type="checkbox" id="retro"><label for="retro">retro loading screen (photosenstivity warning)</label>
         </div>
-        <a rel="me" href="https://mastodon.social/@stormingnormal">Mastodon</a>
+        <a rel="me" href="https://mastodon.social/@stormingnormal">Mastodon</a><br>
+        <a href="https://ntfc.managerwatch.co.uk">Managerwatch</a>, a React application written to analyse Northampton Town football club results.<br>
+        </p>
     </main>
     <script>
         document.getElementById('retro').onclick = function () {
