--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
         </div>
         <a rel="me" href="https://mastodon.social/@stormingnormal">Mastodon</a><br>
         <a href="https://ntfc.managerwatch.co.uk">Managerwatch</a>, a React application written to analyse Northampton Town football club results.<br>
+        <strong>Last few projects worked on (most recent first):</strong><br>
+        <a href="https://www.woodfines.co.uk">Woodfines backend (PHP Wordpress backend)</a><br>
+        <a href="https://www.mymiltonkeynes.co.uk">My Milton Keynes (PHP Wordpress backend)</a><br>
+        Arcoservices new website (not live as of 01/03/2024) - PHP wordpress backend, woocommerce, custom resource calendars.<br>
+        Internal React dashboard holding historical lighthouse and gt metrix reports<br>
+        Fawns.co.uk - amendments to their site and speed upgrades<br>
+        mkbaa.co.uk - new functionality for entrants and management of tables<br>
+        allbrickandstone.com - speed increases<br>
         </p>
     </main>
     <script>
