--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             max-width: 48rem;
             padding: 2rem;
             background-color: white;
-            height: 25vw;
+            height: auto;
         }
     </style>
 
@@ -33,16 +33,28 @@
         David Nash<br>
         Web developer, Northampton, UK<br>
         david[ATAT]eskimo-nation.co.uk<br>
+        <a href="https://github.com/stormingnormal">github</a>a><br>
         PHP, Wordpress, React, ColdFusion, SQL, Javascript<br>
         <div style="position:absolute;bottom:0;right:0">
             <input type="checkbox" id="retro"><label for="retro">retro loading screen (photosenstivity warning)</label>
         </div>
         <a rel="me" href="https://mastodon.social/@stormingnormal">Mastodon</a><br>
-        <a href="https://ntfc.managerwatch.co.uk">Managerwatch</a>, a React application written to analyse Northampton Town football club results.<br>
-        <strong>Last few projects worked on (most recent first):</strong><br>
+        <a href="https://ntfc.managerwatch.co.uk">Managerwatch</a>, a React application written to analyse Northampton Town football club results.<br><br>
+        <strong>Last few projects worked on (most recent first):</strong><br><br>
         <a href="https://www.woodfines.co.uk">Woodfines backend (PHP Wordpress backend)</a><br>
         <a href="https://www.mymiltonkeynes.co.uk">My Milton Keynes (PHP Wordpress backend)</a><br>
         Arcoservices new website (not live as of 01/03/2024) - PHP wordpress backend, woocommerce, custom resource calendars.<br>
+        <br><br>
+        <strong>Live sites</strong><br><br>
+        alandra.co.uk (coldfusion backend and frontend programming in jQuery)<br>
+        arcoservices.co.uk (coldfusion backend and frontend programming in jQuery)<br>
+        whittlebury.com (coldfusion backend and frontend programming in jQuery)<br>
+        carersinherts.org.uk (php wordpress backend and frontend programming in jQuery)<br>
+        albrickandstone.com (php wordpress backend and frontend programming in jQuery)<br>
+        greensandcountry.com (php wordpress backend and frontend programming in jQuery)<br>
+        updatewhoswho.co.uk (php wordpress / mailer for whoswho app)<br>
+        <br>
+        <strong>Other work:</strong><br><br>
         Internal React dashboard holding historical lighthouse and gt metrix reports<br>
         Fawns.co.uk - amendments to their site and speed upgrades<br>
         mkbaa.co.uk - new functionality for entrants and management of tables<br>
