--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         David Nash<br>
         Web developer, Northampton, UK<br>
         david[ATAT]eskimo-nation.co.uk<br>
-        <a href="https://github.com/stormingnormal">github</a>a><br>
+        <a href="https://github.com/stormingnormal">github</a><br>
         PHP, Wordpress, React, ColdFusion, SQL, Javascript<br>
         <div style="position:absolute;bottom:0;right:0">
             <input type="checkbox" id="retro"><label for="retro">retro loading screen (photosenstivity warning)</label>
         </div>
-        <a rel="me" href="https://mastodon.social/@stormingnormal">Mastodon</a><br>
+        <a rel="me" href="https://mastodon.social/@stormingnormal">Mastodon</a> (<a href="https://x.com/stormingnormal">still on twitter or x</a>)<br>
         <a href="https://ntfc.managerwatch.co.uk">Managerwatch</a>, a React application written to analyse Northampton Town football club results.<br><br>
         <strong>Last few projects worked on (most recent first):</strong><br><br>
         <a href="https://www.woodfines.co.uk">Woodfines backend (PHP Wordpress backend)</a><br>
