--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         mkbaa.co.uk - new functionality for entrants and management of tables<br>
         allbrickandstone.com - speed increases<br>
         </p>
-        <div style="position:absolute;bottom:0;right:0">
+        <div style="position:fixed;bottom:0;right:0">
             <input type="checkbox" id="retro"><label for="retro">retro loading screen (photosenstivity warning)</label>
         </div>
     </main>
