--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 <body>
     <main>
         <p>
-        <strong>Eskimo nation.</strong><Br>
+        <strong>Eskimo nation.</strong><Br><Br>
         David Nash<br>
         Web developer, Northampton, UK<br>
         david[ATAT]eskimo-nation.co.uk<br>
         <a href="https://github.com/stormingnormal">github</a><br>
-        PHP, Wordpress, React, ColdFusion, SQL, Javascript<br>
+        PHP, Wordpress, React, ColdFusion, SQL, Javascript<br><Br>
         
         <a rel="me" href="https://mastodon.social/@stormingnormal">Mastodon</a> (<a href="https://x.com/stormingnormal">still on twitter or x</a>)<br>
         <a href="https://ntfc.managerwatch.co.uk">Managerwatch</a>, a React application written to analyse Northampton Town football club results.<br><br>
